# nattrs

./: CHANGELOG.md  README.md  pyproject.toml  todo.md
.github/workflows/: python-app.yml
nattrs/: __init__.py  deleter.py  getter.py  has_checker.py  mutator.py  nested_attributes.py  populate.py  setter.py  updater.py  utils.py
tests/: test_deleter.py  test_getter.py  test_has_checker.py  test_mutator.py  test_nested_attributes.py  test_populate.py  test_setter.py  test_shared.py  test_updater.py
