[tool.poetry]
name = "nattrs"
version = "0.1.1"
description = "Nested attribute getter/setter that works with dictionaries and objects interchangeably."
authors = ["Ludvig Renbo Olsen <mail@ludvigolsen.dk>"]
readme = "README.md"
license = "MIT"
include = ["CHANGELOG.md"]
repository = "https://github.com/ludvigolsen/nattrs"
keywords = [
    "attributes",
    "dictionaries",
    "class",
    "recursive",
]

[tool.poetry.urls]
issues = "https://github.com/ludvigolsen/nattrs/issues"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
