[project]
name = "nattrs"
version = "0.2.3"
description = "Nested attribute getter/setter that works with dictionaries and objects interchangeably."
authors = [{name = "Ludvig", email = "<mail@ludvigolsen.dk>"}]
readme = "README.md"
license = "MIT"
keywords = [
    "attributes",
    "dictionaries",
    "class",
    "recursive",
    "get",
    "set",
    "inplace"
]

[project.urls]
Repository = "https://github.com/ludvigolsen/nattrs"
Issues = "https://github.com/ludvigolsen/nattrs/issues"
Changelog = "https://github.com/ludvigolsen/nattrs/blob/main/CHANGELOG.md"

[tool.poetry]
include = ["CHANGELOG.md"]

[tool.poetry.urls]
issues = "https://github.com/ludvigolsen/nattrs/issues"

[tool.poetry.dependencies]
python = "^3.8"
zipp = "^3.19.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]